# obsidian_2d

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
assets/maps/: 0001.csv  0001.json  0001.tmx
docs/: linux_utils.md
game/: CMakeLists.txt
game/src/: Debug.h  SoundManager.h  gameloop.h
include/App/: App.h
include/App/Scenes/: CharacterSelection.h  Menu.h  Opening.h
include/Obsidian/Core/: App.h  Engine.h  Registry.h
include/Obsidian/Renderer/vulkan/: instance.h  main.cpp  main.h
include/Obsidian/Renderer/vulkan/x86_64/include/libshaderc/: shaderc.h  shaderc.hpp
include/Obsidian/Renderer/vulkan/x86_64/include/vulkan/: vk_dispatch_table_helper.h
include/Obsidian/Renderer/vulkan/x86_64/lib/: libvulkan.so.1
include/Obsidian/Util/: Loggable.h  Logger.h  Time.h
include/Obsidian2D/Core/: App.h  Engine.h  Entity.h  Error.h  Kernel.h  Movable.h  Registry.h  Scene.h  Vec2f.h  WidowEvent.h  WindowEvent.h
include/Obsidian2D/Renderer/: Buffer.h  BufferImage.h  Buffers.h  Camera.h  CommandBuffers.h  DescriptorSet.h  FrameBuffer.h  GraphicPipeline.h  Layers.h  Memory.h  Pipeline.h  RenderPass.h  Shaders.h  Swapchain.h  SyncPrimitives.h  Textures.h  UniformBuffer.h  Util.h  VertexBuffer.h  VulkanInfo.h  Window.h  XcbWindow.h  instance.h  window.h
include/Obsidian2D/Renderer/Vulkan/: Instance.h  main.cpp  main.h
include/Obsidian2D/Renderer/shaders/triangle/: frag.spv  triangle.frag  triangle.vert  vert.spv
include/Obsidian2D/Util/: Loggable.h  Logger.h  RectangleShape.h  Shape.h  Time.h  Vec2f.h  VulkanInfo.h  cube_data.h
src/: Animation.h  Debug.h  Player.h  Position.h  Positionable.h  SoundManager.h  World.h  XcbWindow.cpp  gameloop.h  instance.cpp  main.cpp  vec2f.h  window.cpp
src/debug/: Debug.h  Log.h
src/imgui/: imgui-SFML.cpp  imgui-SFML.h
